--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         class="banner crop-bottom"
       />
       <div class="centered">
-        Nguyễn Phú Hưng1
+        Nguyễn Phú Hưng
         <span class="centered-one">Full Stack Developer</span>
       </div>
       <nav class="navbar">
