--- a/index.html
+++ b/index.html
@@ -29,19 +29,18 @@
 
       <title>Assignment02</title>
     </head>
-    <body>
-      ...
-    </body>
   </html>
 
   <body>
     <!-- HERO -->
     <header class="container">
-      <img
-        src="./images-20250810T115103Z-1-001/images/banner.jpg"
-        alt="banner"
-        class="banner crop-bottom"
-      />
+      <div class="box-img">
+        <img
+          src="./images-20250810T115103Z-1-001/images/banner.jpg"
+          alt="banner"
+          class="banner crop-bottom"
+        />
+      </div>
       <div class="centered">
         Nguyễn Phú Hưng
         <span class="centered-one">Full Stack Developer</span>
