--- a/index.html
+++ b/index.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <!DOCTYPE html>
-  <html lang="vi">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
-        rel="stylesheet"
-      />
-      <link rel="stylesheet" href="font.css" />
-
-      <!-- CSS cho laptop -->
-      <link rel="stylesheet" href="style.css"" />
-      <!-- CSS cho tablet -->
-      <link
-        rel="stylesheet"
-        href="tablet.css"
-        media="screen and (min-width: 601px) and (max-width: 992px)"
-      />
-      <!-- CSS cho mobile -->
-      <link
-        rel="stylesheet"
-        href="mobile.css"
-        media="screen and (max-width: 600px)"
-      />
-
-      <title>Assignment02</title>
-    </head>
-  </html>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="font.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="tablet.css"
+      media="screen and (min-width: 601px) and (max-width: 992px)"
+    />
+    <link
+      rel="stylesheet"
+      href="mobile.css"
+      media="screen and (max-width: 600px)"
+    />
+    <title>Assignment02</title>
+  </head>
   <body>
     <!-- HERO -->
     <header class="container">
@@ -74,27 +65,35 @@
           <h2>Mục tiêu nghề nghiệp</h2>
           <p>
             Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp
-            của FUNiX. Em mong muốn mình sẽ được làm việc với vị trí Fullstack
-            Developer, có thể vận dụng những kiến thức đã được trau dồi và không
-            ngừng học hỏi để phát triển bản thân, cũng như hoàn thành tốt nhất
-            công việc được giao.
+            của FUNiX...
           </p>
         </div>
       </div>
       <div class="personal-info">
         <div class="content-wrapper">
           <h2>Thông tin cá nhân</h2>
-          <p>Giới tính: <span>Nam</span></p>
-          <p>Ngày sinh: <span>14/05/2010</span></p>
-          <p>Điện thoại: <span>(+84) 911325260</span></p>
-          <p>Email: <span>hungnpfx52862@funix.edu.vn</span></p>
-          <p>Địa chỉ: <span>Lâm Đồng, Việt Nam</span></p>
-          <p>Website: <span>https://abc.tech</span></p>
-          <div class="social-icons">
-            <i class="icon-twitter"></i>
-            <i class="icon-facebook"></i>
-            <i class="icon-gplus"></i>
-            <i class="icon-linkedin"></i>
+
+          <!-- Form nhập email -->
+          <div id="email-form">
+            <input
+              type="text"
+              id="email-input"
+              placeholder="Nhập email của bạn..."
+            />
+            <button id="email-submit">Xác nhận</button>
+            <p id="email-error" style="color: red; display: none">
+              Email không hợp lệ, vui lòng nhập đúng định dạng!
+            </p>
+          </div>
+
+          <!-- Nội dung cá nhân, ẩn mặc định -->
+          <div id="personal-details" style="display: none">
+            <p>Giới tính: <span>Nam</span></p>
+            <p>Ngày sinh: <span>14/05/2010</span></p>
+            <p>Điện thoại: <span>(+84) 911325260</span></p>
+            <p>Email: <span>hungnpfx52862@funix.edu.vn</span></p>
+            <p>Địa chỉ: <span>Lâm Đồng, Việt Nam</span></p>
+            <p>Website: <span>https://abc.tech</span></p>
           </div>
         </div>
       </div>
@@ -103,172 +102,70 @@
     <!-- 6 BOX -->
     <section class="sixbox">
       <!-- KINH NGHIỆM -->
-      <div class="box box1">
+      <div class="box">
         <h3><i class="icon-briefcase"></i> Kinh nghiệm</h3>
-        <p>08/2024 – <span class="current-job">Hiện tại</span></p>
-        <p class="title-name">Công ty Y</p>
-        <p>Full Stack Developer</p>
-        <p>
-          - Xây dựng, phát triển Website dựa trên thiết kế và yêu cầu đã có.
-        </p>
-        <p>- Phân tích và thiết kế Database (MySQL, SQLServer, NoSQL,…).</p>
-        <p>
-          - Dùng ngôn ngữ server-side (Python, Java,…) xây dựng Web Service.
-        </p>
-        <p>08/2023 – 07/2024</p>
-        <p class="title-name">Công ty X</p>
-        <p>Web Designer</p>
-        <p>- Thiết kế Website theo yêu cầu khách hàng.</p>
-        <p>- Công cụ: Figma, Canva, Photoshop.</p>
+        <div class="box-content">
+          <p>08/2024 – Hiện tại</p>
+          <p class="title-name">Công ty Y</p>
+          <p>Full Stack Developer</p>
+          <p>- Xây dựng, phát triển Website...</p>
+          <p>08/2023 – 07/2024</p>
+          <p class="title-name">Công ty X</p>
+          <p>Web Designer</p>
+        </div>
       </div>
 
       <!-- HỌC VẤN -->
-      <div class="box box2">
+      <div class="box">
         <h3><i class="icon-pencil"></i> Học vấn</h3>
-        <p>08/2023 – 08/2025</p>
-        <p class="title-name">Tiến sĩ - ĐH FPT</p>
-        <p>- Chuyên ngành: Kỹ thuật phần mềm.</p>
-        <p>- GPA: 4.0 / 4.0</p>
-        <p>08/2023 – 08/2024</p>
-        <p class="title-name">FUNiX</p>
-        <p>- Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack.</p>
-        <p>- GPA: 10 / 10</p>
+        <div class="box-content">
+          <p>08/2023 – 08/2025</p>
+          <p class="title-name">Tiến sĩ - ĐH FPT</p>
+          <p>08/2023 – 08/2024</p>
+          <p class="title-name">FUNiX</p>
+        </div>
       </div>
 
       <!-- HOẠT ĐỘNG -->
-      <div class="box box3">
+      <div class="box">
         <h3><i class="icon-briefcase"></i> Hoạt động</h3>
-        <p>03/2024 – 05/2024</p>
-        <p class="title-name">FPT Edu Hackathon 2024</p>
-        <p>- Giải 3 bảng A</p>
-        <p>08/2023 – 08/2024</p>
-        <p class="title-name">Câu lạc bộ Z</p>
-        <p>- Trưởng ban chuyên môn</p>
+        <div class="box-content">
+          <p>03/2024 – 05/2024</p>
+          <p class="title-name">FPT Edu Hackathon 2024</p>
+          <p>- Giải 3 bảng A</p>
+          <p>08/2023 – 08/2024</p>
+          <p class="title-name">Câu lạc bộ Z</p>
+        </div>
       </div>
 
       <!-- SỞ THÍCH -->
-      <div class="box box4">
+      <div class="box">
         <h3><i class="icon-star"></i> Sở thích</h3>
-        <div class="hobby-list">
-          <div class="hobby-item">
-            <div class="hobby-icon"><i class="icon-music"></i></div>
-            <p>Âm nhạc</p>
-          </div>
-          <div class="hobby-item">
-            <div class="hobby-icon"><i class="icon-flight"></i></div>
-            <p>Du lịch</p>
-          </div>
-          <div class="hobby-item">
-            <div class="hobby-icon"><i class="icon-gamepad"></i></div>
-            <p>Chơi game</p>
-          </div>
-          <div class="hobby-item">
-            <div class="hobby-icon"><i class="icon-camera"></i></div>
-            <p>Chụp ảnh</p>
-          </div>
+        <div class="box-content">
+          <p>Âm nhạc</p>
+          <p>Du lịch</p>
+          <p>Chơi game</p>
+          <p>Chụp ảnh</p>
         </div>
       </div>
 
       <!-- NGÔN NGỮ -->
-      <div class="box box5">
+      <div class="box">
         <h3><i class="icon-doc-text"></i> Ngôn ngữ</h3>
-        <div class="skill">
-          <div class="skill-title">Tiếng Anh — IELTS 7.0</div>
-          <div class="skill-bar">
-            <div class="bar active"></div>
-            <div class="bar active"></div>
-            <div class="bar"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <div class="skill-title">Tiếng Nhật — JLPT N4</div>
-          <div class="skill-bar">
-            <div class="bar active"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-          </div>
+        <div class="box-content">
+          <p>Tiếng Anh — IELTS 7.0</p>
+          <p>Tiếng Nhật — JLPT N4</p>
         </div>
       </div>
 
       <!-- KỸ NĂNG -->
-      <div class="box box6">
+      <div class="box">
         <h3><i class="icon-tools"></i> Kỹ năng</h3>
-        <div class="skill">
-          <div class="skill-title">HTML/CSS: Fundamental</div>
-          <div class="skill-bar">
-            <div class="bar active"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-          </div>
-        </div>
-
-        <!-- JavaScript -->
-        <div class="skill">
-          <div class="skill-title">Javascript: Intermediate</div>
-          <div class="skill-bar">
-            <div class="bar active"></div>
-            <div class="bar active"></div>
-            <div class="bar"></div>
-          </div>
-        </div>
-
-        <!-- NodeJS -->
-        <div class="skill">
-          <div class="skill-title">NodeJS: Intermediate</div>
-          <div class="skill-bar">
-            <div class="bar active"></div>
-            <div class="bar active"></div>
-            <div class="bar"></div>
-          </div>
-        </div>
-
-        <!-- Bootstrap 5 -->
-        <div class="skill">
-          <div class="skill-title">Bootstrap 5: Fundamental</div>
-          <div class="skill-bar">
-            <div class="bar active"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CHỨNG CHỈ -->
-    <section class="awards">
-      <div class="maxwrap">
-        <h2>Chứng chỉ - Giải thưởng</h2>
-        <div class="award-grid">
-          <div class="award-item">
-            <img
-              src="./images-20250810T115103Z-1-001/images/Cert_WEB.png"
-              alt="cert web"
-            />
-            <div>
-              <h4>CHỨNG CHỈ LẬP TRÌNH WEB - FUNiX</h4>
-              <p>- Hoàn thành 6 học phần, GPA: 8.6</p>
-            </div>
-          </div>
-          <div class="award-item">
-            <img
-              src="./images-20250810T115103Z-1-001/images/Cert_PRF.png"
-              alt="cert js"
-            />
-            <div>
-              <h4>CHỨNG CHỈ LẬP TRÌNH JAVASCRIPT - FUNiX</h4>
-              <p>- Hoàn thành 6 học phần, GPA: 8.9</p>
-            </div>
-          </div>
-          <div class="award-item">
-            <img
-              src="./images-20250810T115103Z-1-001/images/Cert_DBI.png"
-              alt="cert db"
-            />
-            <div>
-              <h4>CHỨNG CHỈ THIẾT KẾ DATABASE - FUNiX</h4>
-              <p>- Hoàn thành 3 học phần, GPA: 8.0</p>
-            </div>
-          </div>
+        <div class="box-content">
+          <p>HTML/CSS: Fundamental</p>
+          <p>Javascript: Intermediate</p>
+          <p>NodeJS: Intermediate</p>
+          <p>Bootstrap 5: Fundamental</p>
         </div>
       </div>
     </section>
@@ -284,91 +181,55 @@
               alt="cv cá nhân"
             />
             <div class="p-body">
-              <h3>CV cá nhân</h3>
-              <ul class="p-meta">
-                <li>2024</li>
-                <li>FUNiX</li>
-                <li>Developer</li>
-              </ul>
-              <p class="p-desc">
-                Trang CV cá nhân online. Gồm các mục: mục tiêu nghề nghiệp, kinh
-                nghiệm, học vấn...
-              </p>
-              <div class="p-row">
-                <span>Nhiệm vụ</span>
-                <p>Phát triển code • Review code • Tối ưu code • Xử lý lỗi</p>
-              </div>
-              <div class="p-row">
-                <span>Công nghệ</span>
-                <p>HTML, CSS</p>
-              </div>
+              <h3>Project 1: CV cá nhân</h3>
             </div>
           </article>
-
           <article class="project-card">
             <img
               src="./images-20250810T115103Z-1-001/images/project_2.png"
               alt="quản lý thu chi"
             />
             <div class="p-body">
-              <h3>Trang web quản lý thu chi</h3>
-              <ul class="p-meta">
-                <li>2024</li>
-                <li>FUNiX</li>
-                <li>Developer</li>
-              </ul>
-              <p class="p-desc">
-                Ứng dụng quản lý các khoản thu chi theo ngày, thống kê theo
-                tháng, báo cáo…
-              </p>
-              <div class="p-row">
-                <span>Nhiệm vụ</span>
-                <p>Phát triển code • Review code • Tối ưu code • Xử lý lỗi</p>
-              </div>
-              <div class="p-row">
-                <span>Công nghệ</span>
-                <p>HTML, CSS, JavaScript</p>
-              </div>
+              <h3>Project 2: Quản lý thu chi</h3>
             </div>
           </article>
-
           <article class="project-card">
             <img
               src="./images-20250810T115103Z-1-001/images/project_3.png"
               alt="web tin tức"
             />
             <div class="p-body">
-              <h3>Trang web xem tin tức</h3>
-              <ul class="p-meta">
-                <li>2024</li>
-                <li>FUNiX</li>
-                <li>Developer</li>
-              </ul>
-              <p class="p-desc">
-                Xem tin tức từ nhiều nguồn; có tìm kiếm, lọc theo danh mục, đọc
-                chi tiết.
-              </p>
-              <div class="p-row">
-                <span>Nhiệm vụ</span>
-                <p>Phát triển code • Review code • Tối ưu code • Xử lý lỗi</p>
-              </div>
-              <div class="p-row">
-                <span>Công nghệ</span>
-                <p>HTML, CSS, JavaScript</p>
-              </div>
+              <h3>Project 3: Trang web tin tức</h3>
             </div>
           </article>
         </div>
       </div>
     </section>
 
-    <!-- FOOTER -->
-    <footer class="site-footer">
-      <div class="maxwrap footer-inner">
-        <a href="#"><i class="icon-facebook"></i>Facebook</a>
-        <a href="#"><i class="icon-linkedin"></i>LinkedIn</a>
-        <a href="#"><i class="icon-github-circled"></i>GitHub</a>
-      </div>
-    </footer>
+    <!-- JS -->
+    <script>
+      // Kiểm tra email
+      document.getElementById("email-submit").addEventListener("click", () => {
+        const emailInput = document.getElementById("email-input").value.trim();
+        const emailError = document.getElementById("email-error");
+        const personalDetails = document.getElementById("personal-details");
+        const regex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+        if (regex.test(emailInput)) {
+          emailError.style.display = "none";
+          personalDetails.style.display = "block";
+        } else {
+          emailError.style.display = "block";
+          personalDetails.style.display = "none";
+        }
+      });
+
+      // Toggle box
+      document.querySelectorAll(".sixbox .box").forEach((box) => {
+        box.addEventListener("click", () => {
+          box.classList.toggle("active");
+        });
+      });
+    </script>
   </body>
 </html>
