--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       <!-- KINH NGHIỆM -->
       <div class="box">
         <h3><i class="icon-briefcase"></i> Kinh nghiệm</h3>
+        <button class="viewmoreBTN"></button>
         <div class="box-content">
           <p>08/2024 – <span class="current-job">Hiện tại</span></p>
           <p class="title-name">Công ty Y</p>
@@ -366,29 +367,6 @@
     </footer>
 
     <!-- JS -->
-    <script>
-      // Kiểm tra email
-      document.getElementById("email-submit").addEventListener("click", () => {
-        const emailInput = document.getElementById("email-input").value.trim();
-        const emailError = document.getElementById("email-error");
-        const personalDetails = document.getElementById("personal-details");
-        const regex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-
-        if (regex.test(emailInput)) {
-          emailError.style.display = "none";
-          personalDetails.style.display = "block";
-        } else {
-          emailError.style.display = "block";
-          personalDetails.style.display = "none";
-        }
-      });
-
-      // Toggle box
-      document.querySelectorAll(".sixbox .box").forEach((box) => {
-        box.addEventListener("click", () => {
-          box.classList.toggle("active");
-        });
-      });
-    </script>
+    <script src="./main.js"></script>
   </body>
 </html>
