upd view more/less

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <!-- KINH NGHIỆM -->
       <div class="box">
         <h3><i class="icon-briefcase"></i> Kinh nghiệm</h3>
-        <button class="viewmoreBTN"></button>
+        <button class="viewmoreBTN active">VIEW MORE</button>
         <div class="box-content">
           <p>08/2024 – <span class="current-job">Hiện tại</span></p>
           <p class="title-name">Công ty Y</p>
@@ -132,11 +132,13 @@
           <p>- Thiết kế Website theo yêu cầu khách hàng.</p>
           <p>- Công cụ: Figma, Canva, Photoshop.</p>
         </div>
+        <button class="viewlessBTN">VIEW LESS</button>
       </div>
 
       <!-- HỌC VẤN -->
       <div class="box">
         <h3><i class="icon-pencil"></i> Học vấn</h3>
+        <button class="viewmoreBTN active">VIEW MORE</button>
         <div class="box-content">
           <p>08/2023 – 08/2025</p>
           <p class="title-name">Tiến sĩ - ĐH FPT</p>
@@ -147,11 +149,13 @@
           <p>- Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack.</p>
           <p>- GPA: 10 / 10</p>
         </div>
+        <button class="viewlessBTN">VIEW LESS</button>
       </div>
 
       <!-- HOẠT ĐỘNG -->
       <div class="box">
         <h3><i class="icon-briefcase"></i> Hoạt động</h3>
+        <button class="viewmoreBTN active">VIEW MORE</button>
         <div class="box-content">
           <p>03/2024 – 05/2024</p>
           <p class="title-name">FPT Edu Hackathon 2024</p>
@@ -160,11 +164,13 @@
           <p class="title-name">Câu lạc bộ Z</p>
           <p>- Trưởng ban chuyên môn</p>
         </div>
+        <button class="viewlessBTN">VIEW LESS</button>
       </div>
 
       <!-- SỞ THÍCH -->
       <div class="box">
         <h3><i class="icon-star"></i> Sở thích</h3>
+        <button class="viewmoreBTN active">VIEW MORE</button>
         <div class="box-content">
           <div class="hobby-list">
             <div class="hobby-item">
@@ -185,11 +191,13 @@
             </div>
           </div>
         </div>
+        <button class="viewlessBTN">VIEW LESS</button>
       </div>
 
       <!-- NGÔN NGỮ -->
       <div class="box">
         <h3><i class="icon-doc-text"></i> Ngôn ngữ</h3>
+        <button class="viewmoreBTN active">VIEW MORE</button>
         <div class="box-content">
           <div class="skill">
             <div class="skill-title">Tiếng Anh — IELTS 7.0</div>
@@ -208,11 +216,13 @@
             </div>
           </div>
         </div>
+        <button class="viewlessBTN">VIEW LESS</button>
       </div>
 
       <!-- KỸ NĂNG -->
       <div class="box">
         <h3><i class="icon-tools"></i> Kỹ năng</h3>
+        <button class="viewmoreBTN active">VIEW MORE</button>
         <div class="box-content">
           <div class="skill">
             <div class="skill-title">HTML/CSS: Fundamental</div>
@@ -251,12 +261,14 @@
           </div>
         </div>
       </div>
+      <button class="viewlessBTN">VIEW LESS</button>
     </section>
 
     <!-- CHỨNG CHỈ -->
     <section class="awards">
       <div class="maxwrap">
         <h2>Chứng chỉ - Giải thưởng</h2>
+
         <div class="award-grid">
           <div class="award-item">
             <img
@@ -290,6 +302,7 @@
           </div>
         </div>
       </div>
+      <button class="viewlessBTN">VIEW LESS</button>
     </section>
 
     <!-- DỰ ÁN -->
